# se1-auto-splitter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
