[package]
name = "se1-auto-splitter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["derive", "signature"] }
#dlmalloc = { version = "0.2.8", features = ["global"] }
#itoa = { version = "1", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 3
